# reddit-tui

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  reddit-tui  requirements.txt
.github/workflows/: ci.yml
scripts/: Dockerfile.smoke  smoke_test.py
src/reddit_tui/: __init__.py  __main__.py  app.py  auth.py  cli.py  reddit_client.py  utils.py
src/reddit_tui/screens/: inbox_screen.py  input_dialog.py  post_screen.py  reply_dialog.py  subreddit_screen.py
src/reddit_tui/styles/: app.tcss  inbox.tcss  reply.tcss
src/reddit_tui/widgets/: __init__.py
tests/: test_auth.py  test_cli.py  test_reddit_client.py  test_reddit_client_http.py  test_utils.py
