[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-tui"
version = "0.1.0"
description = "A portable terminal-based Reddit browser"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "textual>=0.47.0",
]

[project.scripts]
reddit-tui = "reddit_tui.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
